funxParser.py
# Generated from c:\Users\mique\Documents\cole\LP\Python\Practica\funx.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class funxParser ( Parser ):

    grammarFileName = "funx.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'^'", "'*'", "'/'", "'%'", 
                     "'+'", "'-'", "'<-'", "'show'", "'if'", "'else'", "'while'", 
                     "'and'", "'or'", "'xor'", "'>'", "'>='", "'<'", "'<='", 
                     "'='", "'!='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'#'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "StringLiteral", "UnterminatedStringLiteral", 
                      "LINE_COMMENT", "A_LA", "PER", "ENTRE", "MOD", "MES", 
                      "MENYS", "ASSIGN", "SHOW", "IF", "ELSE", "WHILE", 
                      "AND", "OR", "XOR", "GT", "GE", "LT", "LE", "EQ", 
                      "NE", "NUMBER", "IDENT", "FUN_IDENT", "COMMENT_START", 
                      "LETTER", "MAJUS", "MINUS", "DIGIT", "WS" ]

    RULE_root = 0
    RULE_fun_declaration = 1
    RULE_expr = 2
    RULE_declare_params = 3
    RULE_block = 4
    RULE_fun_call = 5
    RULE_show = 6
    RULE_logical_expr = 7
    RULE_call_params = 8
    RULE_if_expr = 9
    RULE_while_expr = 10
    RULE_assignment = 11
    RULE_condition_block = 12
    RULE_condition = 13

    ruleNames =  [ "root", "fun_declaration", "expr", "declare_params", 
                   "block", "fun_call", "show", "logical_expr", "call_params", 
                   "if_expr", "while_expr", "assignment", "condition_block", 
                   "condition" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    StringLiteral=5
    UnterminatedStringLiteral=6
    LINE_COMMENT=7
    A_LA=8
    PER=9
    ENTRE=10
    MOD=11
    MES=12
    MENYS=13
    ASSIGN=14
    SHOW=15
    IF=16
    ELSE=17
    WHILE=18
    AND=19
    OR=20
    XOR=21
    GT=22
    GE=23
    LT=24
    LE=25
    EQ=26
    NE=27
    NUMBER=28
    IDENT=29
    FUN_IDENT=30
    COMMENT_START=31
    LETTER=32
    MAJUS=33
    MINUS=34
    DIGIT=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fun_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(funxParser.Fun_declarationContext)
            else:
                return self.getTypedRuleContext(funxParser.Fun_declarationContext,i)


        def expr(self):
            return self.getTypedRuleContext(funxParser.ExprContext,0)


        def getRuleIndex(self):
            return funxParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = funxParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 28
                    self.fun_declaration() 
                self.state = 33
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << funxParser.T__0) | (1 << funxParser.MES) | (1 << funxParser.MENYS) | (1 << funxParser.NUMBER) | (1 << funxParser.IDENT) | (1 << funxParser.FUN_IDENT))) != 0):
                self.state = 34
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fun_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUN_IDENT(self):
            return self.getToken(funxParser.FUN_IDENT, 0)

        def declare_params(self):
            return self.getTypedRuleContext(funxParser.Declare_paramsContext,0)


        def block(self):
            return self.getTypedRuleContext(funxParser.BlockContext,0)


        def getRuleIndex(self):
            return funxParser.RULE_fun_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFun_declaration" ):
                return visitor.visitFun_declaration(self)
            else:
                return visitor.visitChildren(self)




    def fun_declaration(self):

        localctx = funxParser.Fun_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_fun_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(funxParser.FUN_IDENT)
            self.state = 38
            self.declare_params()
            self.state = 39
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(funxParser.ExprContext)
            else:
                return self.getTypedRuleContext(funxParser.ExprContext,i)


        def fun_call(self):
            return self.getTypedRuleContext(funxParser.Fun_callContext,0)


        def NUMBER(self):
            return self.getToken(funxParser.NUMBER, 0)

        def MENYS(self):
            return self.getToken(funxParser.MENYS, 0)

        def MES(self):
            return self.getToken(funxParser.MES, 0)

        def IDENT(self):
            return self.getToken(funxParser.IDENT, 0)

        def A_LA(self):
            return self.getToken(funxParser.A_LA, 0)

        def PER(self):
            return self.getToken(funxParser.PER, 0)

        def ENTRE(self):
            return self.getToken(funxParser.ENTRE, 0)

        def MOD(self):
            return self.getToken(funxParser.MOD, 0)

        def getRuleIndex(self):
            return funxParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = funxParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [funxParser.T__0]:
                self.state = 42
                self.match(funxParser.T__0)
                self.state = 43
                self.expr(0)
                self.state = 44
                self.match(funxParser.T__1)
                pass
            elif token in [funxParser.FUN_IDENT]:
                self.state = 46
                self.fun_call()
                pass
            elif token in [funxParser.MES, funxParser.MENYS, funxParser.NUMBER]:
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==funxParser.MES or _la==funxParser.MENYS:
                    self.state = 47
                    _la = self._input.LA(1)
                    if not(_la==funxParser.MES or _la==funxParser.MENYS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 50
                self.match(funxParser.NUMBER)
                pass
            elif token in [funxParser.IDENT]:
                self.state = 51
                self.match(funxParser.IDENT)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 65
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 63
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = funxParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 54
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 55
                        self.match(funxParser.A_LA)
                        self.state = 56
                        self.expr(8)
                        pass

                    elif la_ == 2:
                        localctx = funxParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 57
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 58
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << funxParser.PER) | (1 << funxParser.ENTRE) | (1 << funxParser.MOD))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 59
                        self.expr(7)
                        pass

                    elif la_ == 3:
                        localctx = funxParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 60
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 61
                        _la = self._input.LA(1)
                        if not(_la==funxParser.MES or _la==funxParser.MENYS):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 62
                        self.expr(6)
                        pass

             
                self.state = 67
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Declare_paramsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(funxParser.IDENT)
            else:
                return self.getToken(funxParser.IDENT, i)

        def getRuleIndex(self):
            return funxParser.RULE_declare_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare_params" ):
                return visitor.visitDeclare_params(self)
            else:
                return visitor.visitChildren(self)




    def declare_params(self):

        localctx = funxParser.Declare_paramsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declare_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==funxParser.IDENT:
                self.state = 68
                self.match(funxParser.IDENT)
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logical_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(funxParser.Logical_exprContext)
            else:
                return self.getTypedRuleContext(funxParser.Logical_exprContext,i)


        def show(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(funxParser.ShowContext)
            else:
                return self.getTypedRuleContext(funxParser.ShowContext,i)


        def expr(self):
            return self.getTypedRuleContext(funxParser.ExprContext,0)


        def getRuleIndex(self):
            return funxParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = funxParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(funxParser.T__2)
            self.state = 79
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 77
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [funxParser.IF, funxParser.WHILE, funxParser.IDENT]:
                        self.state = 75
                        self.logical_expr()
                        pass
                    elif token in [funxParser.SHOW]:
                        self.state = 76
                        self.show()
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 81
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << funxParser.T__0) | (1 << funxParser.MES) | (1 << funxParser.MENYS) | (1 << funxParser.NUMBER) | (1 << funxParser.IDENT) | (1 << funxParser.FUN_IDENT))) != 0):
                self.state = 82
                self.expr(0)


            self.state = 85
            self.match(funxParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fun_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUN_IDENT(self):
            return self.getToken(funxParser.FUN_IDENT, 0)

        def call_params(self):
            return self.getTypedRuleContext(funxParser.Call_paramsContext,0)


        def getRuleIndex(self):
            return funxParser.RULE_fun_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFun_call" ):
                return visitor.visitFun_call(self)
            else:
                return visitor.visitChildren(self)




    def fun_call(self):

        localctx = funxParser.Fun_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fun_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(funxParser.FUN_IDENT)
            self.state = 88
            self.call_params()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHOW(self):
            return self.getToken(funxParser.SHOW, 0)

        def expr(self):
            return self.getTypedRuleContext(funxParser.ExprContext,0)


        def StringLiteral(self):
            return self.getToken(funxParser.StringLiteral, 0)

        def getRuleIndex(self):
            return funxParser.RULE_show

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShow" ):
                return visitor.visitShow(self)
            else:
                return visitor.visitChildren(self)




    def show(self):

        localctx = funxParser.ShowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_show)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(funxParser.SHOW)
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [funxParser.T__0, funxParser.MES, funxParser.MENYS, funxParser.NUMBER, funxParser.IDENT, funxParser.FUN_IDENT]:
                self.state = 91
                self.expr(0)
                pass
            elif token in [funxParser.StringLiteral]:
                self.state = 92
                self.match(funxParser.StringLiteral)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_expr(self):
            return self.getTypedRuleContext(funxParser.If_exprContext,0)


        def while_expr(self):
            return self.getTypedRuleContext(funxParser.While_exprContext,0)


        def assignment(self):
            return self.getTypedRuleContext(funxParser.AssignmentContext,0)


        def getRuleIndex(self):
            return funxParser.RULE_logical_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogical_expr" ):
                return visitor.visitLogical_expr(self)
            else:
                return visitor.visitChildren(self)




    def logical_expr(self):

        localctx = funxParser.Logical_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_logical_expr)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [funxParser.IF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.if_expr()
                pass
            elif token in [funxParser.WHILE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.while_expr()
                pass
            elif token in [funxParser.IDENT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.assignment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Call_paramsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(funxParser.ExprContext)
            else:
                return self.getTypedRuleContext(funxParser.ExprContext,i)


        def getRuleIndex(self):
            return funxParser.RULE_call_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall_params" ):
                return visitor.visitCall_params(self)
            else:
                return visitor.visitChildren(self)




    def call_params(self):

        localctx = funxParser.Call_paramsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_call_params)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 100
                    self.expr(0) 
                self.state = 105
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self, i:int=None):
            if i is None:
                return self.getTokens(funxParser.IF)
            else:
                return self.getToken(funxParser.IF, i)

        def condition_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(funxParser.Condition_blockContext)
            else:
                return self.getTypedRuleContext(funxParser.Condition_blockContext,i)


        def ELSE(self, i:int=None):
            if i is None:
                return self.getTokens(funxParser.ELSE)
            else:
                return self.getToken(funxParser.ELSE, i)

        def block(self):
            return self.getTypedRuleContext(funxParser.BlockContext,0)


        def getRuleIndex(self):
            return funxParser.RULE_if_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_expr" ):
                return visitor.visitIf_expr(self)
            else:
                return visitor.visitChildren(self)




    def if_expr(self):

        localctx = funxParser.If_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_if_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(funxParser.IF)
            self.state = 107
            self.condition_block()
            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 108
                    self.match(funxParser.ELSE)
                    self.state = 109
                    self.match(funxParser.IF)
                    self.state = 110
                    self.condition_block() 
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==funxParser.ELSE:
                self.state = 116
                self.match(funxParser.ELSE)
                self.state = 117
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(funxParser.WHILE, 0)

        def condition_block(self):
            return self.getTypedRuleContext(funxParser.Condition_blockContext,0)


        def getRuleIndex(self):
            return funxParser.RULE_while_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_expr" ):
                return visitor.visitWhile_expr(self)
            else:
                return visitor.visitChildren(self)




    def while_expr(self):

        localctx = funxParser.While_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_while_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(funxParser.WHILE)
            self.state = 121
            self.condition_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(funxParser.IDENT, 0)

        def ASSIGN(self):
            return self.getToken(funxParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(funxParser.ExprContext,0)


        def getRuleIndex(self):
            return funxParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = funxParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(funxParser.IDENT)
            self.state = 124
            self.match(funxParser.ASSIGN)
            self.state = 125
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(funxParser.ConditionContext,0)


        def block(self):
            return self.getTypedRuleContext(funxParser.BlockContext,0)


        def getRuleIndex(self):
            return funxParser.RULE_condition_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition_block" ):
                return visitor.visitCondition_block(self)
            else:
                return visitor.visitChildren(self)




    def condition_block(self):

        localctx = funxParser.Condition_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_condition_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.condition(0)
            self.state = 128
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(funxParser.ConditionContext)
            else:
                return self.getTypedRuleContext(funxParser.ConditionContext,i)


        def expr(self):
            return self.getTypedRuleContext(funxParser.ExprContext,0)


        def GT(self):
            return self.getToken(funxParser.GT, 0)

        def GE(self):
            return self.getToken(funxParser.GE, 0)

        def LT(self):
            return self.getToken(funxParser.LT, 0)

        def LE(self):
            return self.getToken(funxParser.LE, 0)

        def EQ(self):
            return self.getToken(funxParser.EQ, 0)

        def NE(self):
            return self.getToken(funxParser.NE, 0)

        def AND(self):
            return self.getToken(funxParser.AND, 0)

        def OR(self):
            return self.getToken(funxParser.OR, 0)

        def XOR(self):
            return self.getToken(funxParser.XOR, 0)

        def getRuleIndex(self):
            return funxParser.RULE_condition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)



    def condition(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = funxParser.ConditionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_condition, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.state = 131
                self.match(funxParser.T__0)
                self.state = 132
                self.condition(0)
                self.state = 133
                self.match(funxParser.T__1)
                pass

            elif la_ == 2:
                self.state = 135
                self.expr(0)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 167
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,17,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 165
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
                    if la_ == 1:
                        localctx = funxParser.ConditionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_condition)
                        self.state = 138
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 139
                        self.match(funxParser.GT)
                        self.state = 140
                        self.condition(12)
                        pass

                    elif la_ == 2:
                        localctx = funxParser.ConditionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_condition)
                        self.state = 141
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 142
                        self.match(funxParser.GE)
                        self.state = 143
                        self.condition(11)
                        pass

                    elif la_ == 3:
                        localctx = funxParser.ConditionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_condition)
                        self.state = 144
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 145
                        self.match(funxParser.LT)
                        self.state = 146
                        self.condition(10)
                        pass

                    elif la_ == 4:
                        localctx = funxParser.ConditionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_condition)
                        self.state = 147
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 148
                        self.match(funxParser.LE)
                        self.state = 149
                        self.condition(9)
                        pass

                    elif la_ == 5:
                        localctx = funxParser.ConditionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_condition)
                        self.state = 150
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 151
                        self.match(funxParser.EQ)
                        self.state = 152
                        self.condition(8)
                        pass
